--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
             echo "image_name=$(basename *.iso)" >> $GITHUB_OUTPUT
           else
             sudo bash mkmaciso "${{ github.event.inputs.macos_version }}" dmg
-            echo "image_name=$(basename *.dmg.iso)" >> $GITHUB_OUTPUT
+            echo "image_name=$(basename *.dmg.img)" >> $GITHUB_OUTPUT
           fi
 
       - name: Upload ISO artifact
@@ -77,7 +77,7 @@ jobs:
         uses: actions/upload-artifact@v5
         with:
           name: ${{ steps.create_image.outputs.image_name }}
-          path: ./*.dmg.iso
+          path: ./*.dmg.img
           compression-level: 0
           retention-days: 7
 
@@ -94,7 +94,7 @@ jobs:
               echo "## Successfully built $(basename *.iso)" >> $GITHUB_STEP_SUMMARY
               echo "Note: This ISO image is intended for create macOS virtual machine on Proxmox VE, QEMU, VMware, and VirtualBox." >> $GITHUB_STEP_SUMMARY
             else
-              echo "## Successfully built $(basename *.dmg.iso)" >> $GITHUB_STEP_SUMMARY
+              echo "## Successfully built $(basename *.dmg.img)" >> $GITHUB_STEP_SUMMARY
               echo "> [!NOTE]" >> $GITHUB_STEP_SUMMARY
               echo '> This DMG image is intended for flash to USB drive using [Rufus](https://rufus.ie/en/#download) (Windows) or dd (Linux)' >> $GITHUB_STEP_SUMMARY
               echo '> Can also be used with virtual machines (require convert to `.vhd` for Hyper-V or `.vmdk` for VMware)' >> $GITHUB_STEP_SUMMARY
