chore: update workflow summaries and improve UX
- Extend artifact retention from 7 to 15 days (fit better with forks list)
- Add reverse psychology star prompt to workflow summaries
- Fix some grammar here and there
- Delete and recreate forks-list release instead of editing

--- a/.github/workflows/build-recovery.yml
+++ b/.github/workflows/build-recovery.yml
@@ -191,7 +191,7 @@ jobs:
           name: macOS-${{ steps.version_info.outputs.version_name }}-Recovery-ISO
           path: ${{ steps.compress_iso.outputs.compressed_file }}
           compression-level: 0
-          retention-days: 7
+          retention-days: 15
 
       - name: Sanitize release tag
         id: sanitize_tag
@@ -227,9 +227,37 @@ jobs:
             echo "> This runner may have network issues. Please **re-run the workflow** to try a different runner." >> $GITHUB_STEP_SUMMARY
           elif [ "${{ job.status }}" == "success" ]; then
             echo "## Successfully built **macOS ${{ steps.version_info.outputs.version_name }} Recovery** ISO" >> $GITHUB_STEP_SUMMARY
-            echo "Note: This ISO image is intended for create macOS virtual machine on Proxmox VE, QEMU, VMware, and VirtualBox." >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "Found this useful? [Give it a ⭐ star](https://github.com/LongQT-sea/macos-iso-builder) so others can find it too!" >> $GITHUB_STEP_SUMMARY
+            echo "Note: This ISO image is intended for creating macOS virtual machine on Proxmox VE, QEMU, VMware, and VirtualBox." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "---" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "<details>" >> $GITHUB_STEP_SUMMARY
+            echo "<summary>⚠️ Do NOT click this. Seriously.</summary>" >> $GITHUB_STEP_SUMMARY
+            echo "<details>" >> $GITHUB_STEP_SUMMARY
+            echo "<summary>⚠️ DO NOT CLICK. LAST WARNING.</summary>" >> $GITHUB_STEP_SUMMARY
+            echo "<br>" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "You clicked anyway. Typical." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "This workflow just performed mass-scale **forbidden Apple sorcery** that Cupertino pretends doesn't exist." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**What you got (for free, like a thief):**" >> $GITHUB_STEP_SUMMARY
+            echo "- ✅ A legit macOS installer" >> $GITHUB_STEP_SUMMARY
+            echo "- ✅ 3+ hours not wasted on broken torrents" >> $GITHUB_STEP_SUMMARY
+            echo "- ✅ Zero shady downloads" >> $GITHUB_STEP_SUMMARY
+            echo "- ✅ Something that actually works" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Whatever you do, **DO NOT** [⭐ star this repo](https://github.com/LongQT-sea/macos-iso-builder)." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "![star](https://raw.githubusercontent.com/LongQT-sea/mkmaciso/main/.github/star.png)" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Seriously. Don't do it. Don't help other people find this. I'm sure you won't anyway. Nobody ever does." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "*(...unless you're the kind of person who does the opposite of what they're told)*" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "</details>" >> $GITHUB_STEP_SUMMARY
+            echo "</details>" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "> [!TIP]" >> $GITHUB_STEP_SUMMARY
             echo "> Enable [Cloudflare WARP](https://one.one.one.one/) for faster downloads." >> $GITHUB_STEP_SUMMARY
