fix(ci): refresh forks list

--- a/.github/workflows/refresh-forks-list.yml
+++ b/.github/workflows/refresh-forks-list.yml
@@ -101,4 +101,9 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           gh release delete forks-list -y --cleanup-tag || true
-          gh release create forks-list --title "Recent Forks List" --notes-file release_notes.md
+          
+          gh release create forks-list \
+            --title "Recent Forks List" \
+            --notes-file release_notes.md \
+            --latest=false \
+            --verify-tag=false
